# django-auth

./: README.md  docker-compose.yml  errors.txt  note.txt  pyproject.toml
docs/: commands.txt  errors.txt  note.txt  routes.txt  schema.dbml  tree.txt
envs/: .env.sample
http/: auth.http  places.http  users.http
src/django_app/: __init__.py  config.py  container.py  routes.py  settings.py  test.py  urls.py
src/django_app/__shared/: config.py  constants.py
src/django_app/modules/v1/auth/: admin.py  api.py  apps.py  filters.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
src/django_app/modules/v1/auth/migrations/: 0001_initial.py
src/django_app/modules/v1/places/: admin.py  api.py  apps.py  container.py  models.py  repositories.py  serializers.py  services.py  urls.py  use_cases.py  utils.py
src/django_app/modules/v1/places/migrations/: 0001_initial.py  0002_enable_postgis_extension.py
src/django_app/modules/v1/places/seedwork/: dto.py  use_cases.py
src/django_app/modules/v1/users/: admin.py  api.py  apps.py  container.py  filters.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  use_cases.py  utils.py  views.py
src/django_app/modules/v1/users/management/commands/: seed_users.py
src/django_app/modules/v1/users/migrations/: 0001_initial.py
src/django_app/modules/v1/users/seedwork/: dto.py  repositories.py  use_cases.py
temp/places/: __init__.py  api.py  apps.py  filters.py  models.py  repositories.py  serializers.py  services.py  tests.py  urls.py  utils.py  views.py
temp/users/: apps.py  models.py  serializers.py  urls.py  use_cases.py  views.py
temp/users/management/commands/: seed_users.py
temp/users/seedwork/: use_cases.py
